# betu-tanulas

./: .gitignore  Cargo.toml  DESIGN.md  Dioxus.toml  Makefile  README.md  index.html
.github/workflows/: ci.yml
assets/: manifest.webmanifest  tailwind.css  tailwind.input.css  words.json
assets/audio/: ATTRIBUTIONS.md
e2e/: package-lock.json  package.json  playwright.config.ts  tsconfig.json
e2e/tests/: helpers.ts  idle-replay.spec.ts  layout.spec.ts  progress-persists.spec.ts  slot-tap-repeat.spec.ts  solve-word.spec.ts  tap-without-drag.spec.ts  tier-unlock.spec.ts  wrong-drop.spec.ts
src/: audio.rs  game.rs  i18n.rs  idle.rs  level_select.rs  lib.rs  main.rs  menu.rs  progress.rs  puzzle.rs  puzzle_screen.rs  screen.rs  word.rs
tests/: audio_assets.rs  drag_state_integration.rs  game_flow_integration.rs  index_html_template.rs  level_select_render.rs  manifest_template.rs  menu_render.rs  navigation_flow.rs  parent_dialog_render.rs  puzzle_screen_render.rs  puzzle_screen_source_guard.rs  words_validation.rs
tools/: gen_audio.py  gen_icons.py
