[package]
name = "betu_tanulas"
version = "0.1.0"
edition = "2024"

[lib]
name = "betu_tanulas"
path = "src/lib.rs"

[[bin]]
name = "betu_tanulas"
path = "src/main.rs"

[dependencies]
dioxus = { version = "0.7.9", features = ["web"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"

[dev-dependencies]
dioxus-ssr = "0.7.9"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
